Max-Height Issues on Tablet

--- a/css/main.scss
+++ b/css/main.scss
@@ -139,12 +139,12 @@ h1.home {
 		padding: $spacing-unit;
 		box-sizing: border-box;
 		text-align: center;
-
 		img{
 			max-width: 100%; max-height: 90vh; 
 			margin: auto;
 			box-sizing: border-box;
 		}
+		@media ($tablet) {max-height: none;}
 	}
 	@media ($tablet) {
 		li{
